--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
   },
   "dependencies": {
     "highlight.js": "^10.7.2",
+    "spark-md5": "^3.0.2",
     "tinycolor2": "^1.4.1"
   },
   "husky": {
