--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bk-magic-vue",
-  "version": "2.4.13",
+  "version": "2.4.15-beta.1",
   "description": "基于蓝鲸 Magicbox 和 Vue 的前端组件库",
   "main": "dist/bk-magic-vue.min.js",
   "files": [
@@ -162,14 +162,14 @@
     "throttle-debounce": "~2.1.0",
     "transliteration": "~2.1.3",
     "url-loader": "~2.0.0",
-    "vue": "2.5.22",
+    "vue": "^2.7.0",
     "vue-i18n": "~8.11.2",
     "vue-jest": "~3.0.4",
     "vue-loader": "~15.7.0",
     "vue-markdown-loader": "~2.4.1",
     "vue-router": "~3.0.6",
     "vue-style-loader": "~4.1.2",
-    "vue-template-compiler": "2.5.22",
+    "vue-template-compiler": "^2.7.0",
     "webpack": "~4.35.0",
     "webpack-bundle-analyzer": "~3.3.2",
     "webpack-dev-middleware": "~3.7.0",
@@ -179,7 +179,7 @@
     "webpack-stream": "~5.2.1"
   },
   "peerDependencies": {
-    "vue": "^2.5.22"
+    "vue": "^2.7.0"
   },
   "dependencies": {
     "highlight.js": "^10.7.2",
