--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
   },
   "dependencies": {
     "highlight.js": "^10.7.2",
+    "marked": "^4.2.2",
     "spark-md5": "^3.0.2",
     "tinycolor2": "^1.4.1"
   },
