--- a/package.json
+++ b/package.json
@@ -179,11 +179,11 @@
     "webpack-stream": "~5.2.1"
   },
   "peerDependencies": {
-    "vue": "^2.7.0"
+    "vue": "^2.6.0"
   },
   "dependencies": {
     "highlight.js": "^10.7.2",
-    "marked": "^4.2.2",
+    "marked": "4.2.12",
     "spark-md5": "^3.0.2",
     "tinycolor2": "^1.4.1"
   },
