--- a/package.json
+++ b/package.json
@@ -182,7 +182,9 @@
     "vue": "^2.6.0"
   },
   "dependencies": {
+    "clipboard": "^2.0.11",
     "highlight.js": "^10.7.2",
+    "json-formatter-js": "^2.3.4",
     "marked": "4.2.12",
     "spark-md5": "^3.0.2",
     "tinycolor2": "^1.4.1"
